--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -46,7 +46,7 @@ canvas{
   	background: -webkit-linear-gradient(left top, red, rgb(91,117,244)); /* For Safari 5.1 to 6.0 */
   	background: -o-linear-gradient(bottom right, red, rgb(91,117,244)); /* For Opera 11.1 to 12.0 */
   	background: -moz-linear-gradient(bottom right, red, rgb(91,117,244)); /* For Firefox 3.6 to 15 */
-  	background: linear-gradient(to bottom right, rgb(255, 33, 39), rgb(255, 33, 59), rgb(59, 33, 259)); /* Standard syntax */
+  	background: radial-gradient(circle at 90% 150%, rgb(255, 195, 39) 2%, rgb(255, 33, 39) 15%, rgb(59, 33, 225), rgb(59, 33, 75)); /* Standard syntax */
 	flex-basis: 48%;
 	flex: 1;
 	width: 100%;
