--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -22,31 +22,63 @@ canvas{
 	width: 100%;
 	height: 100%;
 }
-#top-info{
-	max-width: 50%;
-	color: white;
+.section{
+	height: 100vh;
 	display: flex;
+	align-items: center;
 	flex-direction: column;
-	position: absolute;
-	background-color: rgba(0,0,0,0);
-	bottom: 2.5%;
-	font-size: 0.8em;
-  	padding: 2.5%;
 }
-#top-info-title{
-	flex-basis: 100%;
-	font-size: 1.7em;
-	background: -webkit-linear-gradient(left top, red, rgb(91,117,244));
+#top-title{
+	font-size: 3em;
+	text-align: center;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	top: -2.5rem;
+	display: flex;
+	background: -webkit-linear-gradient(left top, rgb(254, 3, 45), rgb(33, 248, 255));
  	-webkit-background-clip: text;
  	-webkit-text-fill-color: transparent;
-  	margin-bottom: 2.5%;
 }
-#bottom-wrap{
+#top-section{
+	padding-top: 2.5%;
+	background-color: black;
+}
+#canvas-wrap{
+	width: 90%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
 	background: red; /* For browsers that do not support gradients */
   	background: -webkit-linear-gradient(left top, red, rgb(91,117,244)); /* For Safari 5.1 to 6.0 */
   	background: -o-linear-gradient(bottom right, red, rgb(91,117,244)); /* For Opera 11.1 to 12.0 */
   	background: -moz-linear-gradient(bottom right, red, rgb(91,117,244)); /* For Firefox 3.6 to 15 */
-  	background: radial-gradient(circle at 90% 150%, rgb(255, 195, 39) 2%, rgb(255, 33, 39) 15%, rgb(59, 33, 225), rgb(59, 33, 75)); /* Standard syntax */
+	background: radial-gradient(circle at 90% 100%, rgb(255, 195, 39) 2%, rgb(255, 33, 39) 15%, rgb(59, 33, 225), rgb(59, 33, 75)); /* Standard syntax */
+}
+#sketch-standin{
+	background-color: black;
+	width: 99.5%;
+	height: 99.5%;
+	display: flex;
+	flex-direction: column;
+}
+#canvas-area{
+	display: flex;
+	flex-basis: 75%;
+	flex-direction: row;
+	color: white;
+}
+.canvas-section{
+	flex-basis: 20%;
+}
+#canvas-left{
+}
+#sketch{
+	flex-basis: 60%;
+}
+#bottom-wrap{
 	flex-basis: 48%;
 	flex: 1;
 	width: 100%;
