--- a/frontend/src/css/Layout.css
+++ b/frontend/src/css/Layout.css
@@ -1,5 +1,5 @@
 html{
-	background-color: black;
+	background-color: white;
 	height: 100%;
 	overflow-x: hidden;
 }
@@ -13,7 +13,7 @@ body, #root {
 }
 .content{
 	position: relative;
-	background-color: black;
+	background-color: white;
 	display: flex;
 	flex-direction: column;
 	min-height: 100%;
