--- a/frontend/src/css/navbar.css
+++ b/frontend/src/css/navbar.css
@@ -2,22 +2,30 @@
   font-size: 0.925em;
   height: 3rem;
   max-height: 3rem;
-  line-height: 3rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 5% 2.5%;
   position: relative;
   width: 100%;
   background-color: rgba(0,0,0,0);
   z-index: 999;
 }
-a{
+a {
   text-decoration: none;
+}
+#top-title{
+	font-size: 3em;
+	background: -webkit-linear-gradient(left top, rgb(254, 3, 45), rgb(162, 33, 255));
+ 	-webkit-background-clip: text;
+ 	-webkit-text-fill-color: transparent;
 }
 #navbar .fa-angle-down{
   font-size: 1.1em;
   margin-left: 0.25em;
-  color: rgb(220,220,220);
+  color: black;
 }
 #navbar-links{
-  margin-left: 70%;
   width: 30%;
   display: flex;
 }
@@ -33,12 +41,11 @@ a{
   flex-grow: 1;
   position: relative;
   font-size: 0.8em;
-  color: rgb(220,220,220);
+  color: black;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
   text-align: center;
 }
 .navbar-link:hover, .mobile-navbar-link:hover{
-  color: white;
   cursor: pointer;
   transition: ease-in-out 0.08s;
   -moz-transition: ease-in-out 0.08s;
@@ -136,6 +143,14 @@ a{
 /****Mobile****/
 #mobile-menu, #mobile-menu *, .icon-menu{
   display: none;
+  right: 2.5%;
+  position: absolute;
+  top: 0%;
+  height: 85%;
+  width: 50px;
+  display: inline-block !important;
+  color: rgb(70, 68, 79);
+  z-index: 9999;
 }
 #mobile-menu{
   list-style: none;
@@ -166,11 +181,14 @@ a{
 
 
 @media screen and (max-width: 700px){
+
+  #navbar-links{
+    display: none;
+  }
   .icon-menu{
     position: absolute;
     top: 0.875rem;
     height: 1.25em;
-    left: 2.5%;
     width: 1.25em;
     display: inline-block !important;
     font-size: 1.25em;
@@ -196,7 +214,7 @@ a{
     height: 100vh;
     width: 60vw;
     z-index: 999;
-    background: black;
+    background: white;
     top: 0;
     display: block;
     font-size: 0.5em;
@@ -272,7 +290,7 @@ and (orientation : landscape) {
     height: 100vh;
     width: 40vw;
     z-index: 999;
-    background: black;
+    background: white;
   }
   .icon-menu .fa:hover{
     cursor: pointer;
@@ -280,16 +298,6 @@ and (orientation : landscape) {
   }
   .fa-icon {
     font-size: 3.5em !important;
-  }
-  .icon-menu{
-    position: absolute;
-    top: 0%;
-    height: 85%;
-    left: 2.5%;
-    width: 50px;
-    display: inline-block !important;
-    color: rgb(70, 68, 79);
-    z-index: 9999;
   }
   .icon-menu .fa{
     position: absolute;
@@ -301,16 +309,6 @@ and (orientation : landscape) {
 
 @media only screen 
 and (max-width : 550px), (max-width: 550px) and (orientation: portrait){
-  .icon-menu{
-    position: absolute;
-    top: 0.875rem;
-    height: 1.25em;
-    left: 2.5%;
-    width: 1.25em;
-    display: inline-block !important;
-    font-size: 1.25em;
-    z-index: 9999;
-  }
   .icon-menu .fa{
     position: absolute;
     display: inline-block !important;
@@ -331,7 +329,7 @@ and (max-width : 550px), (max-width: 550px) and (orientation: portrait){
     height: 100vh;
     width: 60vw;
     z-index: 999;
-    background: black;
+    background: white;
     top: 0;
     display: block;
     font-size: 0.5em;
